# cs344

./: CMakeLists.txt  README.md  build.sh
pset/pset1/: HW1  Makefile  student_func.cu
pset/pset2/: student_func.cu
pset/pset3/: student_func_test.cu
